--- a/market_one_.html
+++ b/market_one_.html
@@ -8,16 +8,22 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div id="banner_hero">
-      <img src="images/banner_large.jpg" id="large_banner" alt="">
-      <img src="images/logo_large.png" id="logo_in_banner" alt="">
-    </div>
-    <div class="row">
-      <div class
-    </div>
+    <div id="container">
+      <div class="row">
+        <div id="banner_hero">
+          <div id="banner_logo"></div>
+        </div>
+      </div>
+      <div class="row">
+        <nav>
+          <ul>
+            <li></li>
+          </ul>
+        </nav>
+      </div>
+    </div
   </body>
 </html>
 
