--- a/market_one_.html
+++ b/market_one_.html
@@ -5,23 +5,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Market One - Welcome Page</title>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   </head>
   <body>
     <div id="container">
-      <div class="row">
+      <div>
         <div id="banner_hero">
           <div id="banner_logo"></div>
         </div>
       </div>
-      <div class="row">
-        <nav>
+        <nav class="navigation">
           <ul>
-            <li></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact us</a></li>
           </ul>
         </nav>
+
+        <div>
+        <section>
+        <div>
+          <h1>Welcome</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#">Duis aute irure</a> dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+          <div>
+            <img src="images/profile_1.jpg">
+            <p><h6>Profile Name Here</h6>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href="">READ MORE</a>
+          </div>
+
+          <div>
+            <img src="images/profile_2.jpg">
+            <p><h6>Profile Name Here</h6>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href="">LEARN MORE</a>
+          </div>
+          </section>
+          <aside>
+            <form>
+              <fieldset>
+                <label class="form-required">
+                  <p class="form-label">First Name</p>
+                  <input type="text" />
+                </label>
+                <label class="form-required">
+                  <p class="form-label">Lasst Name</p>
+                  <input type="text" />
+                </label>
+                <label class="form-required">
+                  <p class="form-label">Title</p>
+                  <input type="text" />
+                </label>
+                <label class="form-required">
+                  <p class="form-label">Email Address</p>
+                  <input type="text" />
+                </label>
+                <label class="form-required">
+                  <p class="form-label">Phone?</p>
+                  <input type="text" />
+                </label>
+                <label class="form-required">
+                  <p class="form-label">Already A Client?</p>
+                  <select>
+                    <option value="yes">Yes</option>
+                    <option value="no">No</option>
+                    <option value="dont_know">I don't know</option>
+                  </select>
+                </label>
+              </fieldset>
+              <button>Contact Us</button>
+            </form>
+          </aside>
+
+          <footer>
+            <span>Copyright &copy; MarketOne International.  All rights reserved.</span>
+          </footer>
+        </div>
       </div>
     </div
   </body>
