some aesthetic touches

--- a/market_one_.html
+++ b/market_one_.html
@@ -32,15 +32,17 @@
         </div>
           <div class="half float_left">
             <img src="images/profile_1.jpg">
-            <p><h6>Profile Name Here</h6>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p><h4>Profile Name Here</h4>
+             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <a class="more_arrow" href="">READ MORE</a>
           </div>
 
           <div class="half float_left">
             <img src="images/profile_2.jpg">
-            <p><h6>Profile Name Here</h6>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p><h4>Profile Name Here</h4>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <a class="more_arrow" href="">LEARN MORE</a>
           </div>
           </section>
@@ -70,6 +72,7 @@
                 <label class="form-required">
                   <p class="form-label">Already A Client?</p>
                   <select class="full">
+                    <option value="select">--Please Select--</option>
                     <option value="yes">Yes</option>
                     <option value="no">No</option>
                     <option value="dont_know">I don't know</option>
@@ -81,7 +84,7 @@
           </aside>
         </div>
         <footer class="full blue_bar float_left">
-          <span>Copyright &copy; MarketOne International.  All rights reserved.</span>
+          <span>Copyright &copy; 2013 MarketOne International.  All rights reserved.</span>
         </footer>
       </div>
     </div
