--- a/market_one_.html
+++ b/market_one_.html
@@ -32,21 +32,27 @@
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#">Duis aute irure</a> dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
 
+          <div class="divider_line"></div>
+
           <div class="half float_left">
             <img src="images/profile_1.jpg">
-            <p><h4>Profile Name Here</h4>
+            <p><h3>Profile Name Here</h3>
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <a class="more_arrow" href="">READ MORE</a>
           </div>
 
+          <div class="divider_line"></div>
+
           <div class="half float_left">
             <img src="images/profile_2.jpg">
-            <p><h4>Profile Name Here</h4>
+            <p><h3>Profile Name Here</h3>
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <a class="more_arrow" href="">LEARN MORE</a>
           </div>
+
+          <div class="divider_line"></div>
         </section>
 
         <aside class="one_third float_left">
@@ -100,7 +106,4 @@
 • tablet – width: 481px - 768px
 • desktop – min width: 769px
 • Please make the desktop layout a max-width of 980px (boxed layout) and align it to the middle of the screen.
-
-Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-x
 -->
