--- a/market_one_.html
+++ b/market_one_.html
@@ -26,15 +26,13 @@
       </nav>
 
       <div class="content full float_left">
-        <section class="two_thirds float_left">
+        <section id="welcome" class="float_left">
           <div class="full float_left">
             <h1>Welcome</h1>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#">Duis aute irure</a> dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
 
-          <div class="divider_line"></div>
-
-          <div class="half float_left">
+          <div class="welcome_profile float_left">
             <img src="images/profile_1.jpg">
             <p><h3>Profile Name Here</h3>
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -42,20 +40,16 @@
             <a class="more_arrow" href="">READ MORE</a>
           </div>
 
-          <div class="divider_line"></div>
-
-          <div class="half float_left">
+          <div class="welcome_profile float_left">
             <img src="images/profile_2.jpg">
             <p><h3>Profile Name Here</h3>
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <a class="more_arrow" href="">LEARN MORE</a>
           </div>
-
-          <div class="divider_line"></div>
         </section>
 
-        <aside class="one_third float_left">
+        <aside id="form" class="float_left">
           <form>
             <fieldset>
               <label class="form-required">
@@ -88,7 +82,7 @@
                 </select>
               </label>
             </fieldset>
-            <button>Contact Us</button>
+            <button id="form_submit" type="submit">Contact Us</button>
           </form>
         </aside>
       </div>
