--- a/market_one_.html
+++ b/market_one_.html
@@ -34,16 +34,16 @@
 
           <div class="welcome_profile float_left">
             <img src="images/profile_1.jpg">
-            <p><h3>Profile Name Here</h3>
-             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <h3>Profile Name Here</h3>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <a class="more_arrow" href="">READ MORE</a>
           </div>
 
           <div class="welcome_profile float_left">
             <img src="images/profile_2.jpg">
-            <p><h3>Profile Name Here</h3>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3>Profile Name Here</h3>
+            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <a class="more_arrow" href="">LEARN MORE</a>
           </div>
