--- a/market_one_.html
+++ b/market_one_.html
@@ -34,9 +34,9 @@
 
           <div class="divider_line"></div>
 
-          <div class="half float_left">
-            <img src="images/profile_1.jpg">
-            <p><h3>Profile Name Here</h3>
+          <div class="half float_left mobile_profile">
+            <img src="images/profile_1.jpg" class="image_left">
+            <p class="p_right"><h3>Profile Name Here</h3>
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <a class="more_arrow" href="">READ MORE</a>
@@ -44,9 +44,9 @@
 
           <div class="divider_line"></div>
 
-          <div class="half float_left">
-            <img src="images/profile_2.jpg">
-            <p><h3>Profile Name Here</h3>
+          <div class="half float_left mobile_profile">
+            <img src="images/profile_2.jpg" class="image_left">
+            <p class="p_right"><h3>Profile Name Here</h3>
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <a class="more_arrow" href="">LEARN MORE</a>
@@ -88,7 +88,7 @@
                 </select>
               </label>
             </fieldset>
-            <button>Contact Us</button>
+            <button id="contact_us_button">Contact Us</button>
           </form>
         </aside>
       </div>
